# oxcalfrp-db

./: .gitignore  CMakeLists.txt  ERD-logic.dia  cat_files.cmake
er-diagram/: pisanie.dia
src/: apostol.lua  book.lua  evangelie.lua  foot.lua  head.lua  irmos.lua  pisanie.lua  psalom.lua
